<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutMe"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/my_img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:padding="20dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/profil"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:text="@string/name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:layout_marginBottom="20dp"
        android:text="@string/email" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:layout_marginBottom="20dp"
        android:text="@string/socialmedia" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">


        <Button
            android:id="@+id/Linkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linkedin"
            android:layout_marginEnd="8dp"/>


        <Button
            android:id="@+id/Insta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instagram"
            android:layout_marginStart="8dp"/>
    </LinearLayout>


</LinearLayout>